--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
-    "node-fetch": "^2.6.1"
+    "got": "^11.8.2"
   },
   "devDependencies": {
     "eslint": "^7.31.0",
