--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "bot": "ts-node ."
   },
   "author": "estarossa",
   "license": "ISC",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "eslint": "^7.31.0",
     "nodemon": "^2.0.12",
+    "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   }
 }
