--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.29.0",
+    "@types/node": "^16.7.1",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
-    "got": "^11.8.2"
+    "got": "^11.8.2",
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "prisma": "^2.29.0",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
