--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext", "dom"],
-    "moduleResolution": "node"
+    "lib": ["esnext"],
+    "esModuleInterop": true,
+    "moduleResolution": "node",
   },
 }
