--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "fs": "^0.0.1-security",
     "got": "^11.8.2",
+    "pm2": "^5.1.1",
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-http-proxy": "^1.6.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
