--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Deploy
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: release
 
 jobs:
   deploy:
